tests/test_proof/bad/dates_simple-overlap.catala_en
## Test

```catala
declaration scope A:
  context x content date
  context y content boolean

scope A:
  definition x equals |2022-01-16|
  definition y under condition x <=@ |2010-01-01| consequence equals true
  definition y under condition x >=@ |2010-01-01| and x <@ |2015-01-01| consequence equals false
  definition y under condition x >=@ |2015-01-01| and x <@ |2020-01-01| consequence equals true
  definition y under condition x >=@ |2020-01-01| consequence equals false
```
